@@ -6,6 +6,7 @@
   you clone a command (bug #56806)
 - fixed loading of mono.posix assembly to use the right assembly (bug #56410)
 - adding mapping for UTF8MB4 charset introduced with 5.5.3 (bug #58244)
+- return default values for text columns as quoted (bug #58167)
 
 Version 6.0.7
 - Fix authorization popup after modifying stored procedure in VS (Bug #44715)
